# project-euler-manager

./: Cargo.toml  README.md
euler-data/: Cargo.toml
euler-data/src/: lib.rs  parser.rs
euler-manager/: Cargo.toml
euler-manager/src/: main.rs
src/: main.rs  parser.rs
