[package]
name = "euler-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
nom = "7.1.1"
serde = { version = "1.0.148", features = ["alloc", "derive"] }
toml = "0.5.9"
