[package]
name = "project-euler-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde"]

[dependencies]
lazy_static = "1.4.0"
nom = "7.1.1"
serde = { version = "1.0.148", features = ["derive"], optional = true }
